@@ -1,0 +1,15 @@
+<html>
+  <body>
+    <h1>TreeTank Java Bean Binding</h1>
+    <p>
+    TreeTank can read and write Java POJOs that comply with the following
+    conventions:
+    <li>The java bean has the usual private fields accessible through getters
+        and setters.</li>
+    <li>The fields are of String, int, long, float, double, or boolean.</li>
+    <li>There is a default constructor with no arguments. It is implicit if
+        no constructor is implemented and must be made explicit as soon as
+        there are other constructor accepting arguments.</li>
+    </p>
+  </body>
+</html>
